updated view
