# DMS-Backend/src/controllers/scan.controller.ts
@@ -16,14 +16,23 @@ import {
   del,
   requestBody,
   response,
+  Request,
+  Response,
+  RestBindings,
 } from '@loopback/rest';
 import {Scan} from '../models';
 import {ScanRepository} from '../repositories';
+import {inject} from '@loopback/core';
+import bucket from '../initialize-firebase';
+import multer from 'multer';
+import fs from 'fs';
+
+const upload = multer({dest: 'uploads/'});
 
 export class ScanController {
   constructor(
     @repository(ScanRepository)
-    public scanRepository : ScanRepository,
+    public scanRepository: ScanRepository,
   ) {}
 
   @post('/scans')
@@ -52,9 +61,7 @@ export class ScanController {
     description: 'Scan model count',
     content: {'application/json': {schema: CountSchema}},
   })
-  async count(
-    @param.where(Scan) where?: Where<Scan>,
-  ): Promise<Count> {
+  async count(@param.where(Scan) where?: Where<Scan>): Promise<Count> {
     return this.scanRepository.count(where);
   }
 
@@ -70,9 +77,7 @@ export class ScanController {
       },
     },
   })
-  async find(
-    @param.filter(Scan) filter?: Filter<Scan>,
-  ): Promise<Scan[]> {
+  async find(@param.filter(Scan) filter?: Filter<Scan>): Promise<Scan[]> {
     return this.scanRepository.find(filter);
   }
 
@@ -106,7 +111,7 @@ export class ScanController {
   })
   async findById(
     @param.path.number('id') id: number,
-    @param.filter(Scan, {exclude: 'where'}) filter?: FilterExcludingWhere<Scan>
+    @param.filter(Scan, {exclude: 'where'}) filter?: FilterExcludingWhere<Scan>,
   ): Promise<Scan> {
     return this.scanRepository.findById(id, filter);
   }
@@ -147,4 +152,80 @@ export class ScanController {
   async deleteById(@param.path.number('id') id: number): Promise<void> {
     await this.scanRepository.deleteById(id);
   }
+
+  @post('/upload', {
+    responses: {
+      '200': {
+        description: 'File Upload',
+        content: {'application/json': {schema: {type: 'object'}}},
+      },
+    },
+  })
+  async fileUpload(
+    @requestBody.file()
+    request: Request,
+    @inject(RestBindings.Http.RESPONSE) response: Response,
+  ): Promise<object> {
+    return new Promise<object>((resolve, reject) => {
+      upload.single('file')(request, response, async (err: any) => {
+        if (err) reject(err);
+
+        const file = request.file;
+        if (!file) return;
+        const filePath: any = `uploads/${file.filename}`;
+        try {
+          // switch (file.mimetype) {
+          //   case 'image/jpeg':
+          //   case 'image/png':
+          //   case 'image/jpg':
+          if (file.size > 50e5) {
+            return response.status(400).send({
+              message: 'Image size is too large. Max 5mb',
+            });
+          }
+          //     break;
+          //   default:
+          //     return response.status(400).send({
+          //       message:
+          //         'Invalid file type. Only jpg, jpeg and png files are allowed',
+          //     });
+          // }
+
+          const destination = getUniqueFileAttr(file).destination;
+
+          await bucket.upload(filePath, {
+            destination: destination,
+          });
+
+          const fileRef = bucket.file(destination);
+          const signedUrls = await fileRef.getSignedUrl({
+            action: 'read',
+            expires: '03-09-2030',
+          });
+
+          fs.unlinkSync(filePath);
+
+          resolve({imageUrl: signedUrls[0]});
+        } catch (err) {
+          console.error('Error uploading file:', err);
+          if (fs.existsSync(filePath)) {
+            fs.unlinkSync(filePath);
+          }
+          reject(err);
+        }
+      });
+    });
+  }
+}
+
+function getUniqueFileAttr(file: any) {
+  const filePath = `uploads/${file.filename}`;
+  let destination = `uploads/${Date.now()}_${file.originalname}`;
+
+  const fileTypes: any = ['jpeg', 'jpg', 'png'];
+  destination = destination.includes(fileTypes)
+    ? destination
+    : `${destination}.${file.mimetype.split('/')[1]}`;
+
+  return {filePath, destination};
 }
