# DMS-Frontend/src/app/api/models/scan.ts
@@ -2,9 +2,9 @@
 /* eslint-disable */
 export interface Scan {
   caseId?: number;
+  filename?: string;
   id?: number;
   patientId?: number;
-  scanType: string;
   uploadDate: string;
   url: string;
   userId?: string;
