# DMS-Frontend/src/resources/backend-openapi.yaml
@@ -977,6 +977,32 @@ paths:
               schema:
                 $ref: '#/components/schemas/Todo.Filter1'
       operationId: TodoController.find
+  /upload:
+    post:
+      x-controller-name: ScanController
+      x-operation-name: fileUpload
+      tags:
+        - ScanController
+      responses:
+        '200':
+          description: File Upload
+          content:
+            application/json:
+              schema:
+                type: object
+      requestBody:
+        content:
+          multipart/form-data:
+            x-parser: stream
+            schema:
+              type: object
+              properties:
+                file:
+                  type: string
+                  format: binary
+        description: Request body for multipart/form-data based file upload
+        required: true
+      operationId: ScanController.fileUpload
   /users/login:
     post:
       x-controller-name: UserController
@@ -1331,9 +1357,9 @@ components:
       properties:
         id:
           type: number
-        scanType:
-          type: string
         url:
+          type: string
+        filename:
           type: string
         uploadDate:
           type: string
@@ -1345,7 +1371,6 @@ components:
         caseId:
           type: number
       required:
-        - scanType
         - url
         - uploadDate
       additionalProperties: false
@@ -1356,9 +1381,9 @@ components:
         (tsType: Omit<Scan, 'id'>, schemaOptions: { title: 'NewScans', exclude:
         [ 'id' ] })
       properties:
-        scanType:
-          type: string
         url:
+          type: string
+        filename:
           type: string
         uploadDate:
           type: string
@@ -1370,41 +1395,10 @@ components:
         caseId:
           type: number
       required:
-        - scanType
         - url
         - uploadDate
       additionalProperties: false
       x-typescript-type: Omit<Scan, 'id'>
-    PatientHistoryWithRelations:
-      title: PatientHistoryWithRelations
-      type: object
-      description: >-
-        (tsType: PatientHistoryWithRelations, schemaOptions: { includeRelations:
-        true })
-      properties:
-        id:
-          type: number
-        actionDate:
-          type: string
-          format: date-time
-        actionType:
-          type: string
-        details:
-          type: string
-        patientId:
-          type: string
-        userId:
-          type: string
-        patient:
-          $ref: '#/components/schemas/PatientWithRelations'
-        foreignKey: {}
-        user:
-          $ref: '#/components/schemas/UserWithRelations'
-      required:
-        - actionDate
-        - actionType
-      additionalProperties: false
-      x-typescript-type: PatientHistoryWithRelations
     PatientWithRelations:
       title: PatientWithRelations
       type: object
@@ -1442,6 +1436,36 @@ components:
         - age
       additionalProperties: false
       x-typescript-type: PatientWithRelations
+    PatientHistoryWithRelations:
+      title: PatientHistoryWithRelations
+      type: object
+      description: >-
+        (tsType: PatientHistoryWithRelations, schemaOptions: { includeRelations:
+        true })
+      properties:
+        id:
+          type: number
+        actionDate:
+          type: string
+          format: date-time
+        actionType:
+          type: string
+        details:
+          type: string
+        patientId:
+          type: string
+        userId:
+          type: string
+        patient:
+          $ref: '#/components/schemas/PatientWithRelations'
+        foreignKey: {}
+        user:
+          $ref: '#/components/schemas/UserWithRelations'
+      required:
+        - actionDate
+        - actionType
+      additionalProperties: false
+      x-typescript-type: PatientHistoryWithRelations
     CaseWithRelations:
       title: CaseWithRelations
       type: object
@@ -1468,6 +1492,10 @@ components:
         foreignKey: {}
         user:
           $ref: '#/components/schemas/UserWithRelations'
+        scan:
+          type: array
+          items:
+            $ref: '#/components/schemas/ScanWithRelations'
       additionalProperties: false
       x-typescript-type: CaseWithRelations
     ScanWithRelations:
@@ -1477,9 +1505,9 @@ components:
       properties:
         id:
           type: number
-        scanType:
-          type: string
         url:
+          type: string
+        filename:
           type: string
         uploadDate:
           type: string
@@ -1498,7 +1526,6 @@ components:
         case:
           $ref: '#/components/schemas/CaseWithRelations'
       required:
-        - scanType
         - url
         - uploadDate
       additionalProperties: false
@@ -1510,9 +1537,9 @@ components:
       properties:
         id:
           type: number
-        scanType:
-          type: string
         url:
+          type: string
+        filename:
           type: string
         uploadDate:
           type: string
@@ -1778,6 +1805,7 @@ components:
           enum:
             - patient
             - user
+            - scan
         scope:
           $ref: '#/components/schemas/Case.ScopeFilter'
     Case.Filter:
@@ -2342,9 +2370,9 @@ components:
               properties:
                 id:
                   type: boolean
-                scanType:
-                  type: boolean
                 url:
+                  type: boolean
+                filename:
                   type: boolean
                 uploadDate:
                   type: boolean
@@ -2360,8 +2388,8 @@ components:
                 type: string
                 enum:
                   - id
-                  - scanType
                   - url
+                  - filename
                   - uploadDate
                   - patientId
                   - userId
@@ -2408,9 +2436,9 @@ components:
               properties:
                 id:
                   type: boolean
-                scanType:
-                  type: boolean
                 url:
+                  type: boolean
+                filename:
                   type: boolean
                 uploadDate:
                   type: boolean
@@ -2426,8 +2454,8 @@ components:
                 type: string
                 enum:
                   - id
-                  - scanType
                   - url
+                  - filename
                   - uploadDate
                   - patientId
                   - userId
